RESOLVED FIXED283575
Fix crash in WebCore::FrameLoader::stopAllLoaders
https://bugs.webkit.org/show_bug.cgi?id=283575
Summary Fix crash in WebCore::FrameLoader::stopAllLoaders
pascoe@apple.com
Reported 2024-11-22 09:35:20 PST
285233@main introduced a change that could cause a CachedPage to get destroyed while scripting isn't allowed. This bug is to fix that.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-22 09:35:30 PST
pascoe@apple.com
Comment 2 2024-11-22 09:35:48 PST
EWS
Comment 3 2024-11-22 11:35:14 PST
Committed 286972@main (5d3a56955837): <https://commits.webkit.org/286972@main> Reviewed commits have been landed. Closing PR #37033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.